--- a/foraar1.html
+++ b/foraar1.html
@@ -15,7 +15,7 @@
   
   </head>
   
-  <body class="px-5">
+  <body>
     <!--NAVIGATIONSBAR-->
     <!--LOGO TIL VENSTRE-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
