--- a/kontakt.html
+++ b/kontakt.html
@@ -1,120 +1,123 @@
 <!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kontakt</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <title>Skabelon</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-
-    <!--Google Fonts: Fuzzy Bubbles til H1,H2-->
-    <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-    <!--Google Fonts: Poppins til <p>-->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
-</head>
-
-<body>
+  
+      <!--Google Fonts: Fuzzy Bubbles til H1,H2-->
+      <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
+      <!--Google Fonts: Poppins til <p>-->
+      <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  
+  </head>
+  
+  <body>
     <!--NAVIGATIONSBAR-->
     <!--LOGO TIL VENSTRE-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+  <div class="container-fluid">
+    <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-            <!--MENU-LINJE TIL HØJRE-->
-            <!--justify-content-end for at sætte elemterne ud til højre-->
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <!--DROPDOWN M. SÆSONER-->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="opskrifter.html" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Opskrifter
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="foraar.html">Forår</a></li>
-                            <li><a class="dropdown-item" href="sommer.html">Sommer</a></li>
-                            <li><a class="dropdown-item" href="efteraar.html">Efterår</a></li>
-                            <li><a class="dropdown-item" href="vinter.html">Vinter</a></li>
-                        </ul>
-                    </li>
+    <!--MENU-LINJE TIL HØJRE-->
+    <!--justify-content-end for at sætte elemterne ud til højre-->
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <!--DROPDOWN M. SÆSONER-->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="opskrifter.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Opskrifter
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="foraar.html">Forår</a></li>
+            <li><a class="dropdown-item" href="sommer.html">Sommer</a></li>
+            <li><a class="dropdown-item" href="efteraar.html">Efterår</a></li>
+            <li><a class="dropdown-item" href="vinter.html">Vinter</a></li>
+          </ul>
+        </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="faellesskaal.html">Fælles-skål</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="omos.html">Om Os</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="kontakt.html">Kontakt</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+        <li class="nav-item">
+          <a class="nav-link" href="faellesskaal.html">Fælles-skål</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="omos.html">Om Os</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="kontakt.html">Kontakt</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-    <!----------------------------------serviet --------------------------------->
 
-    <footer class="kontakt py-2">
-        <div class="container d-flex flex-column align-items-center justify-content-between">
-
-            <!-- Servietbillede -->
-            <div class="container">
-                <div class="row align-items-end">
-                    <div class="col-12 col-md-6 d-flex justify-content-center">
-                        <div class="position-relative">
-                                <img src="https://placehold.co/350x350" alt="Serviet" class="img-fluid">
-                            <!-- Tekst ovenpå billedet -->
-                            <div class="position-absolute top-50 start-50 translate-middle">
-                                <h3>Kontakt os:</h3>
-
-                                <div class="row">
-                                    <div class="telefon col-12 col-md-6">
-                                        <p>Telefon.nr.:</p>
-                                        <p>+45 27 14 78 **</p>
-                                    </div>
-
-                                    <div class="mail col-12 col-md-6">
-                                        <p>Mail:</p>
-                                        <p>lille@skaal.dk</p>
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="hjerte col-6 text-end">
-                                        <p>&lt;3</p>
-                                    </div>
-                                    <div class="some col-6 text-end">
-                                        <i class="bi bi-instagram me-2"></i>
-                                        <i class="bi bi-tiktok"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                <!----------------- polarorid --------------------->
-                <div class="col-12 col-md-6 d-flex justify-content-center">
-                    <div class="polaroid" style>
-                        <img src="img/driver.png" alt="Et billede">
-                        <div class="caption">En fælles-skåle fra Lille skål</div>
-                    </div>
+<!-- Kontakt-boks -->
+  <div class="container-kontakt">
+    <div class="container">
+      <div class="row justify-content-center align-items-center">
+  
+        <!-- Kontaktblok med tekst ovenpå billede -->
+        <div class="col-12 col-md-5 my-5">
+          <div class="position-relative">
+            <!-- Baggrundsbillede -->
+            <img src="https://placehold.co/350x300" alt="Serviet" class="img-fluid w-100 rounded shadow">
+  
+            <!-- Tekst ovenpå billedet -->
+            <div class="position-absolute top-50 start-50 translate-middle">
+              <h2>Kontakt os:</h2>
+  
+              <div class="row">
+                <div class="telefon col-12 col-md-6">
+                  <p class="mb-1">Telefon.nr.:</p>
+                  <p>+45 27 14 78 **</p>
                 </div>
-
-
-
-
+  
+                <div class="mail col-12 col-md-6">
+                  <p class="mb-1">Mail:</p>
+                  <p>lille@skaal.dk</p>
                 </div>
+              </div>
+  
+              <div class="row mt-2">
+                <div class="col-6 text-end">
+                  <p>&lt;3</p>
+                </div>
+                <div class="col-6 text-end">
+                  <i class="bi bi-instagram me-2"></i>
+                  <i class="bi bi-tiktok"></i>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
+  
+        <!-- billede ved siden af kontakt-->
+         <div class="col-12 col-md-5 text-center">
+            <img src="img/faellesskaal.png" alt="">
+         </div>
+
+      </div>
+    </div>
+  </div>
+
+
+<!--HERO-SEKTION-->
+<div class="hero-sektion position-relative">
+    <picture>
+      <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
+      <img src="https://placehold.co/100x100" alt="">
+    </picture>
+
+        <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center text-center">
+            <h1>Lille skål</h1>
         </div>
-    </footer>
+</div>
 
 
 
@@ -123,9 +126,6 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  </body>
 </html>
