--- a/skabelon.html
+++ b/skabelon.html
@@ -98,10 +98,10 @@
   <div class="container d-flex flex-column align-items-center justify-content-center">
 
       <!-- Servietbillede som baggrund -->
-      <div class="position-relative py-3 py-md-5">
+      <div class="position-relative py-5 py-md-5">
           <picture>
               <source media="(min-width: 768px)" srcset="https://placehold.co/600x200">
-              <img src="https://placehold.co/300x300" alt="Serviet" class="img-fluid">
+              <img src="https://placehold.co/300x300" alt="Serviet" >
           </picture>
 
           <!-- Tekst ovenpå billedet -->
