--- a/efteraar.html
+++ b/efteraar.html
@@ -82,7 +82,7 @@
 
     <!--INTRODUKTIONS-AFSNIT-->
     <div class="container">
-        <div class="row align-items-start my-5">
+        <div class="row align-items-start my-5 mx-sm-4">
             <!--Tekstfelt m. introduktion til side-->
             <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
             <div class="col-12 col-sm-6">
@@ -97,28 +97,30 @@
     </div>
 
 
-    <!-- Smagen af forår - organge container -->
-    <div class="container-fluid orange mere-padding">
-        <div class="col-12 col-sm-6">
-            <h2>Efterårets Lune Retter</h2>
-            <p>Her finder du opskrifter med alt det bedste fra efteråret – som græskar, rødbeder, pastinak og æbler. Retter, der smager af stearinlys, tæpper og lange, hyggelige middage med dem, du holder af.</p>
-        </div>
-
-        <div class="container text-center p-0">
-            <div class="row align-items-start my-5">
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="Græskar-Daal">
-                </div>
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="efterårspasta">
-                </div>
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="ovnbagte rodfrugter">
-                </div>
+    <!-- Efterårets lune retter - organge container -->
+        <div class="container-fluid orange">
+        <div class="container py-5">
+            <div class="col-12 py-4 col-sm-6 px-sm-5">
+                <h2>Efterårets Lune Retter</h2>
+                <p>Her finder du opskrifter med alt det bedste fra efteråret – som græskar, rødbeder, pastinak og æbler. Retter, der smager af stearinlys, tæpper og lange, hyggelige middage med dem, du holder af.
+                </p>
             </div>
+        <div class="row align-items-start px-sm-5">
+            <div class="col-12 col-sm-4 py-3">
+                <a href="efteraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="efteraar1.html"><h3>Opskrift</h3></a>
+            </div>
+            <div class="col-12 col-sm-4 py-3">
+                <a href="efteraar2.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="efteraar2.html"><h3>Opskrift</h3></a>
+            </div>
+        <div class="col-12 col-sm-4 py-3">
+            <a href="efteraar3.html"><img src="https://placehold.co/80x100" alt=""></a>
+            <a href="efteraar3.html"><h3>Opskrift</h3></a>
+        </div>
         </div>
     </div>
-
+    </div>
 
 
 
