--- a/foraar.html
+++ b/foraar.html
@@ -83,7 +83,7 @@
 
     <!--INTRODUKTIONS-AFSNIT-->
     <div class="container">
-        <div class="row align-items-start my-5">
+        <div class="row align-items-start my-5 mx-sm-4">
             <!--Tekstfelt m. introduktion til side-->
             <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
             <div class="col-12 col-sm-6">
@@ -100,30 +100,29 @@
     </div>
 
 
-    <!-- Smagen af forår - organge container -->
-    <div class="container-fluid orange mere-padding">
-        <div class="col-12 col-sm-6">
-            <h2>Smagen af forår</h2>
-            <p>Her finder du opskrifter med alt det bedste fra foråret – som asparges, spinat, radiser og nye kartofler.
+    <div class="container-fluid orange">
+        <div class="container py-5">
+            <div class="col-12 py-4 col-sm-6 px-sm-5">
+                <h2>Smagen af forår</h2>
+                <p>Her finder du opskrifter med alt det bedste fra foråret – som asparges, spinat, radiser og nye kartofler.
                 Retter, der smager af solskin, spirende altaner og middage med åbne vinduer.</p>
-        </div>
-
-        <div class="container text-center p-0">
-            <div class="row align-items-start my-5">
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="forårstærte">
-                </div>
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="forårsrösti">
-                </div>
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="forårspasta">
-                </div>
             </div>
+        <div class="row align-items-start px-sm-5">
+            <div class="col-12 col-sm-4 py-3">
+                <a href="foraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="foraar1.html"><h3>Opskrift</h3></a>
+            </div>
+            <div class="col-12 col-sm-4 py-3">
+                <a href="foraar2.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="foraar2.html"><h3>Opskrift</h3></a>
+            </div>
+        <div class="col-12 col-sm-4 py-3">
+            <a href="foraar3.html"><img src="https://placehold.co/80x100" alt=""></a>
+            <a href="foraar3.html"><h3>Opskrift</h3></a>
+        </div>
         </div>
     </div>
-
-
+    </div>
 
 
 
