--- a/sommer.html
+++ b/sommer.html
@@ -82,7 +82,7 @@
 
     <!--INTRODUKTIONS-AFSNIT-->
     <div class="container">
-        <div class="row align-items-start my-5">
+        <div class="row align-items-start my-5 mx-sm-4">
             <!--Tekstfelt m. introduktion til side-->
             <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
             <div class="col-12 col-sm-6">
@@ -97,38 +97,30 @@
         </div>
     </div>
 
-
-    <!-- Smagen af forår - organge container -->
-    <div class="container-fluid orange mere-padding">
-        <div class="col-12 col-sm-6">
-            <h2>Smagen af Sol og Sommer</h2>
-            <p>Her finder du opskrifter med alt det bedste fra sommerens køkken – som squash, jordbær, ærter og spidskål. Retter, der smager af feriefornemmelser, kolde drikke og aftener, der strækker sig lidt længere end resten af året.</p>
-        </div>
-
-        <div class="container text-center p-0">
-            <div class="row align-items-start my-5">
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="Grønsags tallerken">
-                </div>
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="Sommer taco">
-                </div>
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="Lun pasta-salat">
-                </div>
+    <!-- Smagen af Sol og Sommer - orange container -->
+        <div class="container-fluid orange">
+        <div class="container py-5">
+            <div class="col-12 py-4 col-sm-6 px-sm-5">
+                <h2>Smagen af Sol og Sommer</h2>
+                <p>Her finder du opskrifter med alt det bedste fra sommerens køkken – som squash, jordbær, ærter og spidskål. Retter, der smager af feriefornemmelser, kolde drikke og aftener, der strækker sig lidt længere end resten af året.
+                </p>
             </div>
+        <div class="row align-items-start px-sm-5">
+            <div class="col-12 col-sm-4 py-3">
+                <a href="sommer1.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="sommer1.html"><h3>Opskrift</h3></a>
+            </div>
+            <div class="col-12 col-sm-4 py-3">
+                <a href="sommer2.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="sommer2.html"><h3>Opskrift</h3></a>
+            </div>
+        <div class="col-12 col-sm-4 py-3">
+            <a href="sommer3.html"><img src="https://placehold.co/80x100" alt=""></a>
+            <a href="sommer3.html"><h3>Opskrift</h3></a>
+        </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
+    </div>
 
 
     <!-- Footer -->
