--- a/vinter.html
+++ b/vinter.html
@@ -82,7 +82,7 @@
 
     <!--INTRODUKTIONS-AFSNIT-->
     <div class="container">
-        <div class="row align-items-start my-5">
+        <div class="row align-items-start my-5 mx-sm-4">
             <!--Tekstfelt m. introduktion til side-->
             <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
             <div class="col-12 col-sm-6">
@@ -97,26 +97,29 @@
     </div>
 
 
-    <!-- Smagen af forår - organge container -->
-    <div class="container-fluid orange mere-padding">
-        <div class="col-12 col-sm-6">
-            <h2>Mad med Vinterstemning</h2>
-            <p>Her finder du opskrifter med vinterens råvarer som rødkål, pastinak, jordskok og græskar. Retter, der luner, mætter og giver ro midt i mørket – perfekte til både hverdagsmad og hyggelige aftener med venner.</p>
-        </div>
-
-        <div class="container text-center p-0">
-            <div class="row align-items-start my-5">
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="Vinternudler">
-                </div>
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="Grøntsags gryde">
-                </div>
-                <div class="col-4">
-                    <img src="https://placehold.co/100x100" alt="Rødbedebøffer med kartofler">
-                </div>
+    <!-- Mad med vinterstemning - orange container -->
+        <div class="container-fluid orange">
+        <div class="container py-5">
+            <div class="col-12 py-4 col-sm-6 px-sm-5">
+                <h2>Mad med Vinterstemning</h2>
+                <p>Her finder du opskrifter med vinterens råvarer som rødkål, pastinak, jordskok og græskar. Retter, der luner, mætter og giver ro midt i mørket – perfekte til både hverdagsmad og hyggelige aftener med venner.
+                </p>
             </div>
+        <div class="row align-items-start px-sm-5">
+            <div class="col-12 col-sm-4 py-3">
+                <a href="vinter1.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="vinter1.html"><h3>Opskrift</h3></a>
+            </div>
+            <div class="col-12 col-sm-4 py-3">
+                <a href="vinter2.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="vinter2.html"><h3>Opskrift</h3></a>
+            </div>
+        <div class="col-12 col-sm-4 py-3">
+            <a href="vinter3.html"><img src="https://placehold.co/80x100" alt=""></a>
+            <a href="vinter3.html"><h3>Opskrift</h3></a>
         </div>
+        </div>
+    </div>
     </div>
 
 
