--- a/kontakt.html
+++ b/kontakt.html
@@ -66,7 +66,7 @@
         <div class="col-12 col-md-5 my-5">
           <div class="position-relative">
             <!-- Baggrundsbillede -->
-            <img src="https://placehold.co/350x300" alt="Serviet" class="img-fluid w-100 rounded shadow">
+            <img src="img/lilleserviet.png" alt="Serviet">
   
             <!-- Tekst ovenpå billedet -->
             <div class="position-absolute top-50 start-50 translate-middle">
