--- a/kontakt.html
+++ b/kontakt.html
@@ -107,17 +107,18 @@
   </div>
 
 
-<!--HERO-SEKTION-->
-<div class="hero-sektion position-relative">
-    <picture>
-      <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
-      <img src="https://placehold.co/100x100" alt="">
-    </picture>
-
-        <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center text-center">
-            <h1>Lille skål</h1>
-        </div>
+<!--logo-kontakt-->
+<div class="py-5">
+    <div class="logo-hero d-flex justify-content-center">
+        <img src="img/logo.png" alt="">
+    </div>
+    <div class=" text-center">
+        <h1>Lille skål</h1>
+    </div>
 </div>
+
+    
+
 
 
 
