--- a/foraar.html
+++ b/foraar.html
@@ -21,7 +21,7 @@
 <body>
     <!--NAVIGATIONSBAR-->
     <!--LOGO TIL VENSTRE-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
